# dype

./: .gitignore  Dockerfile  LICENSE  README.md  dype.cabal  fix-whitespace.yaml  index.html  stack.yaml
.github/actions/gh-pages/lib/: index.js
.github/workflows/: Makefile  cabal-install.yml  cabal.yml  delete-unused-caches.yml  deploy.yml  haddock.yml  hadolint.yml  stack.yml  test.yml  whitespace.yml
app/: GenDemo.hs
bench/: .gitkeep  Bench.hs  Main.hs
config/: stack-9.10.3.yaml  stack-9.12.4.yaml  stack-9.14.1.yaml  stack-9.2.8.yaml  stack-9.4.8.yaml  stack-9.6.7.yaml  stack-9.8.4.yaml
docs/: .gitkeep  DEVELOPMENT-GUIDE.md
docs/dype/: Dayan-Adapter-Agda.html  Dayan-Algebra-GF9.html  Dayan-Compute-CRT.html  Dayan-Compute-Cascade.html  Dayan-Compute-ModArith.html  Dayan-Compute-Orbit.html  Dayan-Core-Constants.html  Dayan-Core-Torus.html  Dayan-Core-Trit.html  Dayan-Core-Tryte.html  Dayan-Kernel-Conversion.html  Dayan-Parse-Dy.html  Dayan-Parse-Lexer.html  Dayan-ProofGen-AST.html  Dayan-ProofGen-Emit.html  Dayan-ProofGen-Templates.html  Dayan-Verify-Agda.html  Dayan-Verify-Pipeline.html  Dayan.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  (+7 more)
docs/dype/src/: Dayan.Adapter.Agda.html  Dayan.Algebra.GF9.html  Dayan.Compute.CRT.html  Dayan.Compute.Cascade.html  Dayan.Compute.ModArith.html  Dayan.Compute.Orbit.html  Dayan.Core.Constants.html  Dayan.Core.Torus.html  Dayan.Core.Trit.html  Dayan.Core.Tryte.html  Dayan.Kernel.Conversion.html  Dayan.Parse.Dy.html  Dayan.Parse.Lexer.html  Dayan.ProofGen.AST.html  Dayan.ProofGen.Emit.html  Dayan.ProofGen.Templates.html  Dayan.Verify.Agda.html  Dayan.Verify.Pipeline.html  Dayan.html
src/: Dayan.hs
src/Dayan/Adapter/: Agda.hs
src/Dayan/Algebra/: GF9.hs
src/Dayan/Compute/: CRT.hs  Cascade.hs  ModArith.hs  Orbit.hs
src/Dayan/Core/: Constants.hs  Torus.hs  Trit.hs  Tryte.hs
src/Dayan/Kernel/: Conversion.hs
src/Dayan/Parse/: Dy.hs  Lexer.hs
src/Dayan/ProofGen/: AST.hs  Emit.hs  Templates.hs
src/Dayan/Verify/: Agda.hs  Pipeline.hs
src/github/workflows/: cabal-install.yml  cabal.yml  delete-unused-caches.yml  deploy.yml  haddock.yml  stack.yml  test.yml  whitespace.yml
tables/: .gitkeep
test/: .gitkeep  AgdaCompat.hs  GenDemo.hs  Spec.hs  T6Lattice.dy
